--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 								<div class="entry d-flex flex-column h-100 mb-0 bg-contrast-0 p-4 rounded-xxl" style="--cnvs-post-item-margin:0;">
 									<div class="entry-image mb-3">
 										<a href="#">
-											<img src="demos/saas-2/images/new/blogs/1.svg" alt="Image 3" class="rounded-6">
+											<img src="demos/saas-2/images/d3.png" alt="Image 3" class="rounded-6">
 										</a>
 									</div>
 									<div class="entry-desc mb-auto">
@@ -182,7 +182,7 @@
 								<div class="entry d-flex flex-column h-100 mb-0 bg-contrast-0 p-4 rounded-xxl" style="--cnvs-post-item-margin:0;">
 									<div class="entry-image mb-3">
 										<a href="#">
-											<img src="demos/saas-2/images/new/blogs/2.svg" alt="Image 3" class="rounded-6">
+											<img src="demos/saas-2/images/d4.png" alt="Image 3" class="rounded-6">
 										</a>
 									</div>
 									<div class="entry-desc mb-auto">
@@ -203,7 +203,7 @@
 								<div class="entry d-flex flex-column h-100 mb-0 bg-contrast-0 p-4 rounded-xxl" style="--cnvs-post-item-margin:0;">
 									<div class="entry-image mb-3">
 										<a href="#">
-											<img src="demos/saas-2/images/new/blogs/3.svg" alt="Image 3" class="rounded-6">
+											<img src="demos/saas-2/images/DD.png" alt="Image 3" class="rounded-6">
 										</a>
 									</div>
 									<div class="entry-desc mb-auto">
@@ -226,7 +226,7 @@
 								<div class="entry d-flex flex-column h-100 mb-0 bg-contrast-0 p-4 rounded-xxl" style="--cnvs-post-item-margin:0;">
 									<div class="entry-image mb-3">
 										<a href="#">
-											<img src="demos/saas-2/images/new/blogs/1.svg" alt="Image 3" class="rounded-6">
+											<img src="demos/saas-2/images/Designer.png" alt="Image 3" class="rounded-6">
 										</a>
 									</div>
 									<div class="entry-desc mb-auto">
@@ -242,7 +242,7 @@
 								<div class="entry d-flex flex-column h-100 mb-0 bg-contrast-0 p-4 rounded-xxl" style="--cnvs-post-item-margin:0;">
 									<div class="entry-image mb-3">
 										<a href="#">
-											<img src="demos/saas-2/images/new/blogs/2.svg" alt="Image 3" class="rounded-6">
+											<img src="demos/saas-2/images/Grow.png" alt="Image 3" class="rounded-6">
 										</a>
 									</div>
 									<div class="entry-desc mb-auto">
@@ -258,7 +258,7 @@
 								<div class="entry d-flex flex-column h-100 mb-0 bg-contrast-0 p-4 rounded-xxl" style="--cnvs-post-item-margin:0;">
 									<div class="entry-image mb-3">
 										<a href="#">
-											<img src="demos/saas-2/images/new/blogs/3.svg" alt="Image 3" class="rounded-6">
+											<img src="demos/saas-2/images/Shop.png" alt="Image 3" class="rounded-6">
 										</a>
 									</div>
 									<div class="entry-desc mb-auto">
@@ -369,7 +369,7 @@
 														<!-- <a href="#" class="button button-large button-border h-bg-black button-dark button-black rounded-pill m-0">Learn More</a> -->
 													</div>
 													<div class="col-md-6">
-														<img src="demos/saas-2/images/svg/group.svg" alt="Image">
+														<img src="demos/saas-2/images/Shop.png" alt="Image">
 													</div>
 												</div>
 												<div class="line border-black border-width-2"></div>
@@ -454,19 +454,19 @@
 									<div class="swiper swiper-tab-container">
 										<div class="swiper-wrapper">
 											<div class="swiper-slide">
-												<img src="demos/saas-2/images/new/tabs/app.svg" alt=".." class="w-100 rounded-xxl">
+												<img src="demos/saas-2/images/WAB.png" alt=".." class="w-100 rounded-xxl">
 											</div>
 											<div class="swiper-slide">
-												<img src="demos/saas-2/images/new/tabs/features.svg" alt=".." class="w-100 rounded-xxl bg-success bg-opacity-10">
+												<img src="demos/saas-2/images/WAB.png" alt=".." class="w-100 rounded-xxl bg-success bg-opacity-10">
 											</div>
 											<div class="swiper-slide">
-												<img src="demos/saas-2/images/new/tabs/pay.jpg" alt=".." class="w-100 rounded-xxl">
+												<img src="demos/saas-2/images/WAB.png" alt=".." class="w-100 rounded-xxl">
 											</div>
 											<div class="swiper-slide">
-												<img src="demos/saas-2/images/new/tabs/pay.jpg" alt=".." class="w-100 rounded-xxl">
+												<img src="demos/saas-2/images/WAB.png" alt=".." class="w-100 rounded-xxl">
 											</div>
 											<div class="swiper-slide">
-												<img src="demos/saas-2/images/new/tabs/pay.jpg" alt=".." class="w-100 rounded-xxl">
+												<img src="demos/saas-2/images/WAB.png" alt=".." class="w-100 rounded-xxl">
 											</div>
 										</div>
 									</div>
