whatsapp integration section

--- a/index.html
+++ b/index.html
@@ -277,6 +277,36 @@
 				<!-- end key features -->
 
 				<!-- start whatsapp integration section  -->
+				<div id="whatsapp-integration">
+					<div class="green-box">
+						<div class="random-lines"> 
+							<div class="random-lines1"> 15+ WhatsApp Business Integrations</div>
+							Enjoy seamless integration with your favourite e-stores, CRMs, and more.
+						</div>
+							
+						
+						<div class="icons-line">
+							<div class="icon"><img src="./demos/saas-2/images/GrowFunnel-08.png" alt="Icon 1"></div>
+							<div class="icon"><img src="./demos/saas-2/images/GrowFunnel-08.png" alt="Icon 2"></div>
+							<div class="icon"><img src="./demos/saas-2/images/GrowFunnel-08.png" alt="Icon 3"></div>
+							<div class="icon"><img src="./demos/saas-2/images/GrowFunnel-08.png" alt="Icon 4"></div>
+							<div class="icon"><img src="./demos/saas-2/images/GrowFunnel-08.png" alt="Icon 5"></div>
+							<div class="icon"><img src="./demos/saas-2/images/GrowFunnel-08.png" alt="Icon 6"></div>
+							<div class="icon"><img src="./demos/saas-2/images/GrowFunnel-08.png" alt="Icon 7"></div>
+							<div class="icon"><img src="./demos/saas-2/images/GrowFunnel-08.png" alt="Icon 8"></div>
+						</div>
+						<div class="icons-line">
+							<div class="icon"><img src="icon9.png" alt="Icon 9"></div>
+							<div class="icon"><img src="icon10.png" alt="Icon 10"></div>
+							<div class="icon"><img src="icon11.png" alt="Icon 11"></div>
+							<div class="icon"><img src="icon12.png" alt="Icon 12"></div>
+							<div class="icon"><img src="icon13.png" alt="Icon 13"></div>
+							<div class="icon"><img src="icon14.png" alt="Icon 14"></div>
+							<div class="icon"><img src="icon15.png" alt="Icon 15"></div>
+							<div class="icon"><img src="icon16.png" alt="Icon 16"></div>
+						</div>
+				</div>
+				</div>
 				<!-- end whatsapp integration section  -->
 
 				<!-- start services  -->
