--- a/index.html
+++ b/index.html
@@ -995,11 +995,9 @@
 								style="background: url('demos/saas-2/images/new/footer-promo.svg'); background-position: center center; background-size: cover;">
 								<div class="col-lg-8 text-center">
 									<div class="position-relative z-1">
-										<h3 class="display-4 fw-bolder text-white mb-3 ls-n-1">Start your Website!!
+										<h3 class="display-4 fw-bolder text-white mb-3 ls-n-1">we've got you all clicked in. (start ur web)
 										</h3>
-										<p class="lead">Unlock seamless customer connections with our comprehensive
-											WhatsApp API services. From setup to automation - we've got you all
-											clicked in.</p>
+										<p class="lead">Unlock seamless customer connections with our comprehensive WhatsApp API services. From setup to automation.</p>
 										<a href="#"
 											class="button button-xlarge bg-white text-dark rounded-pill h-op-09 m-0 px-5 py-3">Get
 											Demo <i class="fa-solid fa-arrow-right ms-1"></i></a>
