--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 					<div class="container">
 						<div class="row align-items-center gy-3">
 							<div class="col-lg-4 d-none d-lg-block">
-								<p class="fw-medium mb-0">Trusted by 70K+ Clients &mdash;</p>
+								<p class="fw-medium mb-0">Trusted by &mdash;</p>
 							</div>
 
 							<div class="col-lg-8">
@@ -639,6 +639,9 @@
 				</div>
 				<!-- end  -->
 				<div id="section-examples" class="section page-section dark bg-black py-6 my-6">
+
+						<p class="display-6 fw-bolder mb-2">What can you do with WhatsApp Automation? Almost anything. Browse below to find inspiration.</p>
+					
 					<div class="carousel-container1">
 						<div class="carousel1" id="carousel2">
 							<div class="col-12 text-center">
@@ -995,7 +998,7 @@
 								style="background: url('demos/saas-2/images/new/footer-promo.svg'); background-position: center center; background-size: cover;">
 								<div class="col-lg-8 text-center">
 									<div class="position-relative z-1">
-										<h3 class="display-4 fw-bolder text-white mb-3 ls-n-1">we've got you all clicked in. (start ur web)
+										<h3 class="display-4 fw-bolder text-white mb-3 ls-n-1">we've got you all clicked in.
 										</h3>
 										<p class="lead">Unlock seamless customer connections with our comprehensive WhatsApp API services. From setup to automation.</p>
 										<a href="#"
