--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 							integration.
 						</p>
 
-						<a href="#" class="button button-large px-lg-5 py-lg-3 rounded-pill m-0 mb-4"><i
+						<a href="https://forms.gle/2n5Gmi2cKh87N4bS9" target="_blank" class="button button-large px-lg-5 py-lg-3 rounded-pill m-0 mb-4"><i
 								class="fa-solid fa-star"></i>Book a Demo</a>
 					</div>
 					<div class="col-lg-6 col-xxl-7 bg-display-style pb-5">
@@ -972,7 +972,7 @@
 												Test multiple messages & use winning creative
 											</li>
 										</ul>
-										<a href="#"
+										<a href="https://forms.gle/2n5Gmi2cKh87N4bS9" target="_blank"
 											class="button button-large button-black h-bg-color rounded-pill m-0">Get a
 											Demo</a>
 									</div>
