--- a/index.html
+++ b/index.html
@@ -639,8 +639,8 @@
 				</div>
 				<!-- end  -->
 				<div id="section-examples" class="section page-section dark bg-black py-6 my-6">
-
-						<p class="display-6 fw-bolder mb-2">What can you do with WhatsApp Automation? Almost anything. Browse below to find inspiration.</p>
+						
+						<p class="display-6 fw-bolder mb-2 container">What can you do with WhatsApp Automation? Almost anything. Browse below to find inspiration.</p>
 					
 					<div class="carousel-container1">
 						<div class="carousel1" id="carousel2">
