--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
 
 				<div id="" class="section">
 					<div class="container">
-						<h3 class="display-4 fw-bolder mb-3 ls-n-2 text-center mb-lg-6 mt-lg-6">How do I get started
+						<h3 class="display-4 fw-bolder mb-3 ls-n-2 text-center mb-lg-6 mt-lg-6 mt-sm-6">How do I get started
 							with Grow Funnel?</h3>
 
 						<div class="row justify-content-between align-items-center">
