--- a/index.html
+++ b/index.html
@@ -35,11 +35,21 @@
 	<!-- Document Title
 	============================================= -->
 	<title>SAAS 2 | Canvas</title>
+	<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-NT5DZLHZ');</script>
+	<!-- End Google Tag Manager -->
 
 </head>
 
 <body class="stretched">
-
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NT5DZLHZ"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
 	<!-- Document Wrapper
 	============================================= -->
 	<div id="wrapper" class="wrapper">
@@ -654,7 +664,7 @@
 							</div>
 							<div class="col-12 text-center">
 								<video controls>
-									<source src="assets/video/Growth & auto ad 1.4.mp4" type="video/mp4">
+									<source src="assets/video/Growfunnel interact 2.mp4" type="video/mp4">
 								</video>
 							</div>
 							<div class="col-12 text-center">
