--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<meta http-equiv="x-ua-compatible" content="IE=edge">
 	<meta name="author" content="SemiColonWeb">
-	<meta name="description"
-		content="Create SAAS &amp; AI Subscription Websites with Canvas Template. Get Canvas to build powerful websites easily with the Highly Customizable &amp; Best Selling Bootstrap Template, today.">
+	<meta name="description" content="GrowFunnel – Marketing Automation">
 
 	<!-- Font Imports -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,21 +33,24 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>SAAS 2 | Canvas</title>
+	<title>GrowFunnel – Marketing Automation</title>
 	<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-	})(window,document,'script','dataLayer','GTM-NT5DZLHZ');</script>
+	<script>(function (w, d, s, l, i) {
+			w[l] = w[l] || []; w[l].push({
+				'gtm.start':
+					new Date().getTime(), event: 'gtm.js'
+			}); var f = d.getElementsByTagName(s)[0],
+				j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+					'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+		})(window, document, 'script', 'dataLayer', 'GTM-NT5DZLHZ');</script>
 	<!-- End Google Tag Manager -->
 
 </head>
 
 <body class="stretched">
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NT5DZLHZ"
-	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NT5DZLHZ" height="0" width="0"
+			style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
 	<!-- Document Wrapper
 	============================================= -->
@@ -124,18 +126,21 @@
 
 		<!-- Slider
 		============================================= -->
-		<div id="slider" class="slider-element min-vh-0 overlay-effect" >
+		<div id="slider" class="slider-element min-vh-0 overlay-effect">
 			<div class="container">
 				<div class="row justify-content-between align-items-center align-items-xl-end">
 
 					<div class="py-4 py-lg-6 my-lg-6 text-center text-lg-start">
-						<h1 class="display-4 fw-bolder ls-n-1 overlay-effect-color">Empower Your Business with WhatsApp API
+						<h1 class="display-4 fw-bolder ls-n-1 overlay-effect-color">Empower Your Business with WhatsApp
+							API
 							Services.</h1>
-						<p class="lead fw-normal mb-5 overlay-effect-color">Transform customer engagement with seamless WhatsApp
+						<p class="lead fw-normal mb-5 overlay-effect-color">Transform customer engagement with seamless
+							WhatsApp
 							integration.
 						</p>
 
-						<a href="https://forms.gle/2n5Gmi2cKh87N4bS9" target="_blank" class="button button-large px-lg-5 py-lg-3 rounded-pill m-0 mb-4"><i
+						<a href="https://forms.gle/2n5Gmi2cKh87N4bS9" target="_blank"
+							class="button button-large px-lg-5 py-lg-3 rounded-pill m-0 mb-4"><i
 								class="fa-solid fa-star"></i>Book a Demo</a>
 					</div>
 					<div class="bg-display-style pb-5">
@@ -525,8 +530,7 @@
 													</div>
 
 													<div class="col-lg-4">
-														<img src="assets/svg/analysis.svg" alt=".."
-															height="52">
+														<img src="assets/svg/analysis.svg" alt=".." height="52">
 														<h4 class="mt-4 mb-2 fs-5 fw-bold"> Chat & Campaign Analytics
 														</h4>
 														<p class="mb-0">Track how your campaigns and agents are doing
@@ -534,8 +538,7 @@
 													</div>
 
 													<div class="col-lg-5">
-														<img src="assets/svg/paybill.svg" alt=".."
-															height="52">
+														<img src="assets/svg/paybill.svg" alt=".." height="52">
 														<h4 class="mt-4 mb-2 fs-5 fw-bold">Green Tick Approval</h4>
 														<p class="mb-0">We assist you in getting the Green tick on
 															WhatsApp with your brand name to establish trust.</p>
@@ -623,24 +626,20 @@
 									<div class="swiper swiper-tab-container">
 										<div class="swiper-wrapper">
 											<div class="swiper-slide">
-												<img src="assets/images/Step1.jpeg" alt=".."
-													class="w-100 rounded-xxl">
+												<img src="assets/images/Step1.jpeg" alt=".." class="w-100 rounded-xxl">
 											</div>
 											<div class="swiper-slide">
 												<img src="assets/images/Step2.jpeg" alt=".."
 													class="w-100 rounded-xxl bg-success bg-opacity-10">
 											</div>
 											<div class="swiper-slide">
-												<img src="assets/images/Step3.jpeg" alt=".."
-													class="w-100 rounded-xxl">
+												<img src="assets/images/Step3.jpeg" alt=".." class="w-100 rounded-xxl">
 											</div>
 											<div class="swiper-slide">
-												<img src="assets/images/step4.jpeg" alt=".."
-													class="w-100 rounded-xxl">
+												<img src="assets/images/step4.jpeg" alt=".." class="w-100 rounded-xxl">
 											</div>
 											<div class="swiper-slide">
-												<img src="assets/images/step5.jpeg" alt=".."
-													class="w-100 rounded-xxl">
+												<img src="assets/images/step5.jpeg" alt=".." class="w-100 rounded-xxl">
 											</div>
 										</div>
 									</div>
@@ -652,9 +651,10 @@
 				</div>
 				<!-- end  -->
 				<div id="section-examples" class="section page-section dark bg-black py-6 my-6 pt-3">
-						
-						<p class="display-6 fw-bolder m-4 ">What can you do with WhatsApp Automation? Almost anything. Browse below to find inspiration.</p>
-					
+
+					<p class="display-6 fw-bolder m-4 ">What can you do with WhatsApp Automation? Almost anything.
+						Browse below to find inspiration.</p>
+
 					<div class="carousel-container1">
 						<div class="carousel1" id="carousel2">
 							<div class="col-12 text-center">
@@ -985,8 +985,10 @@
 												Test multiple messages & use winning creative
 											</li>
 										</ul>
-										<a href="https://api.whatsapp.com/send?phone=919833997660&text=Explore%20WhatsApp%20Magic!" target="_blank"
-											class="button button-large button-black h-bg-color rounded-pill m-0">Get Started</a>
+										<a href="https://api.whatsapp.com/send?phone=919833997660&text=Explore%20WhatsApp%20Magic!"
+											target="_blank"
+											class="button button-large button-black h-bg-color rounded-pill m-0">Get
+											Started</a>
 									</div>
 
 									<div class="w-100"></div>
@@ -1010,9 +1012,11 @@
 								style="background: url('assets/svg/footer-promo.svg'); background-position: center center; background-size: cover;">
 								<div class="col-lg-8 text-center">
 									<div class="position-relative z-1">
-										<h3 class="display-4 fw-bolder text-white mb-3 ls-n-1">we've got you all clicked in.
+										<h3 class="display-4 fw-bolder text-white mb-3 ls-n-1">we've got you all clicked
+											in.
 										</h3>
-										<p class="lead">Unlock seamless customer connections with our comprehensive WhatsApp API services. From setup to automation.</p>
+										<p class="lead">Unlock seamless customer connections with our comprehensive
+											WhatsApp API services. From setup to automation.</p>
 										<a href="https://forms.gle/2n5Gmi2cKh87N4bS9" target="_blank"
 											class="button button-xlarge bg-white text-dark rounded-pill h-op-09 m-0 px-5 py-3">Get
 											Demo <i class="fa-solid fa-arrow-right ms-1"></i></a>
@@ -1056,8 +1060,8 @@
 
 	<!-- JavaScripts
 	============================================= -->
-	<script src="/assets/js/plugins.min.js"></script>
-	<script src="/assets/js/functions.bundle.js"></script>
+	<script src="./assets/js/plugins.min.js"></script>
+	<script src="./assets/js/functions.bundle.js"></script>
 	<script>
 
 		document.addEventListener('DOMContentLoaded', function () {
