color and content change

--- a/index.html
+++ b/index.html
@@ -1042,11 +1042,8 @@
 			<div id="copyrights" class="bg-transparent border-top op-08">
 				<div class="container text-center">
 
-					Copyrights &copy; 2023 All Rights Reserved by SemiColonWeb
-					<div class="copyright-links"><a
-							href="https://1.envato.market/c/1309643/480739/4415?u=http%3A%2F%2Fthemeforest.net%2Fuser%2Fsemicolonweb%2Fportfolio"
-							target="_blank">Portfolio</a> / <a href="http://support.semicolonweb.com"
-							target="_blank">Support</a></div>
+					Copyrights &copy; 2023 All Rights Reserved by GrowFunnel
+
 
 				</div>
 			</div>
